fix xiaolumm statsview username

--- a/shopmanager/shopapp/xiaolumm/templates/admin/xiaolumm/change_list.html
+++ b/shopmanager/shopapp/xiaolumm/templates/admin/xiaolumm/change_list.html
@@ -59,7 +59,7 @@
             
             <li>
               <a href="/m/stats/" class="historylink" target="_blank">
-                数据统计
+                今日数据统计
               </a>
             </li>
             <li>
