--- a/shopmanager/shopapp/xiaolumm/templates/stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/stats.html
@@ -114,7 +114,7 @@
 	
   }
   
-  $("select[name='#state_table-table_length']").change(function(e){
+  $("select[name='#state_table_length']").change(function(e){
 		e.preventDefault();
 		Calc_stats_data();
 	});
