--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -1,6 +1,6 @@
 {% extends "weixin/weixin_base.html" %}
 {% load mathfilters %}
-{% block title %}审核通知 3000条卡通浴巾免费送！{% endblock %}
+{% block title %}审核通知 3000条卡通凉席免费送！{% endblock %}
 
 {% block container %}
 
@@ -18,13 +18,8 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
-      <p style="color:red;">3月23日 - 3月30日， <font style="font-size:20px;color:red;">3000</font>份卡通浴巾免费试用活动结束了，感谢美妈们的热情参与，下期活动更精彩，妈妈们记得继续关注哦！</p>
-      <p>第一批 共569名 ，邀请码 14 次 ，点击 70 次以上  <a href="/weixin/finallist/1/1/150322/">中奖名单&gt;&gt;</a></p>
-      <p>第二批 共505名 ，邀请码 19次 ，点击 69次以上  <a href="/weixin/finallist/2/1/150322/">中奖名单&gt;&gt;</a></p>
-      <p>第三批 共407名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/3/1/150322/">中奖名单&gt;&gt;</a></p>
-      <p>第四批 共455名 ，邀请码 18次 ，点击 69次以上  <a href="/weixin/finallist/4/1/150322/">中奖名单&gt;&gt;</a></p>
-      <p>第五批 共417名 ，邀请码 15次 ，点击 63次以上  <a href="/weixin/finallist/5/1/150322/">中奖名单&gt;&gt;</a></p>
-      <p>第六批 共647名 ，邀请码 14次 ，点击 41次以上  <a href="/weixin/finallist/6/1/150322/">中奖名单&gt;&gt;</a></p>
+      <p style="color:red;">4月13日 - 4月20日， <font style="font-size:20px;color:red;">3000</font>份卡通凉席免费试用活动，<a href="/weixin/freesamples/">美妈们快抢！>></a></p>
+      <!--<p>第一批 共569名 ，邀请码 14 次 ，点击 70 次以上  <a href="/weixin/finallist/1/1/150322/">中奖名单&gt;&gt;</a></p>-->
     </div>
   </div>
 
