--- a/shopmanager/shopapp/xiaolumm/templates/admin/xiaolumm/change_list.html
+++ b/shopmanager/shopapp/xiaolumm/templates/admin/xiaolumm/change_list.html
@@ -58,7 +58,7 @@
           {% block object-tools-items %}
             
             <li>
-              <a href="/m/stats/" class="historylink" target="_blank">
+              <a href="/m/stats/?pk={{ user.pk }}" class="historylink" target="_blank">
                 今日数据统计
               </a>
             </li>
