--- a/shopmanager/shopapp/xiaolumm/templates/stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/stats.html
@@ -17,10 +17,18 @@
 
 
 {% block container %}
-<div class="row">
-	<div class="page-header"  >
+
+<div class="row" style="margin-top:20px">
+  <div class="col-xs-8 page-header">
 	<h2>小鹿妈妈-今日数据统计</h2>
 	</div>
+  <div class="col-xs-4" style="margin: 80px 0 20px;">
+  <select class="form-control" name="color" id="id-select">
+    {% for manager in managers %}
+    <option {% if manager.pk == pk %} selected="selected" {% endif %} value="70">{{ manager.username }}</option>
+    {% endfor %}
+  </select>
+  </div>
 </div>
 
 <div style="margin-top:20px">
@@ -45,10 +53,21 @@
   </table>
 </div>
 
+<form action="/m/stats/" method="get" id="id-form">
+  <input type="hidden" name="pk" id="id-pk"/>
+</form>
+
 {% endblock %}
 
 {% block tail_script %}
 <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+$("#id-select").change(function(){ 
+    var val = $(this).children("option:selected").val();
+    $("#id-pk").val(val);
+    $("#id-form").submit()
+)
+</script>
 <script type="text/javascript">
 
   $('#state_table').dataTable({
