--- a/shopmanager/shopapp/xiaolumm/templates/stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/stats.html
@@ -25,7 +25,7 @@
   <div class="col-xs-4" style="margin: 80px 0 20px;">
   <select class="form-control" name="color" id="id-select">
     {% for manager in managers %}
-    <option {% if manager.pk == pk %} selected="selected" {% endif %} value="70">{{ manager.username }}</option>
+    <option {% if manager.pk == pk %} selected="selected" {% endif %} value="{{ manager.pk }}">{{ manager.username }}</option>
     {% endfor %}
   </select>
   </div>
@@ -66,7 +66,7 @@ $("#id-select").change(function(){
     var val = $(this).children("option:selected").val();
     $("#id-pk").val(val);
     $("#id-form").submit()
-)
+});
 </script>
 <script type="text/javascript">
 
