fix weixin freesample and invite result html

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -49,7 +49,7 @@
       {% else %}
       <p style="color:red;">亲，恭喜您的试用申请通过了！</p>
       <p>您的综合得分: <font style="color:red">{{ vip_code.usage_count  }} *10</font> + <font style="color:orange">{{ link_click.clicker_num }}</font> = {{ vip_code.usage_count|mul:10|add:link_click.clicker_num }}</p>
-      <p style="color:#029fd6">请扫描二维码添加客服微信(长按图片识别二维码)咨询浴巾领取流程:</p>
+      <p style="color:#029fd6">请扫描二维码添加客服微信(长按图片识别二维码)咨询凉席领取流程:</p>
       <div class="row">
 	<div class="col-xs-12">
 	  <div class="thumbnail" style="padding:3px" id="id_i1">
