fix items admin

--- a/shopmanager/flashsale/pay/templates/pay/morder.html
+++ b/shopmanager/flashsale/pay/templates/pay/morder.html
@@ -14,7 +14,7 @@
     <script src="http://cdn.bootcss.com/fullPage.js/2.5.2/vendors/jquery.easings.min.js"></script>
 
     <script src="{{ STATIC_URL }}script/pingpp_pay.js"></script>
-    <script src="{{ STATIC_URL }}script/page_ctrl.js"></script>
+
     <link rel="stylesheet" href="{{ STATIC_URL }}style/order.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}style/style_other.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}style/animation.css">
@@ -59,11 +59,11 @@
         <div class="img"><img src="{{ STATIC_URL }}images/pay_alipay.png"></div>
         <div class="text">支付宝支付</div>
     </div>
-    <div id="upacp_wap" class="wrapper">
+   <!-- <div id="upacp_wap" class="wrapper">
         <div class="check"></div>
         <div class="img"><img src="{{ STATIC_URL }}images/pay_union.png"></div>
         <div class="text">银联支付</div>
-    </div>
+    </div>-->
 </div>
 <div class="title">确认购买商品</div>
 <div class="product_sure">
