--- a/shopmanager/flashsale/pay/templates/pay/morder.html
+++ b/shopmanager/flashsale/pay/templates/pay/morder.html
@@ -1,32 +1,19 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+{% extends "pay/pay_base.html" %}
 
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+{% block title %}小鹿美美-商品详情{% endblock %}
 
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="http://cdn.bootcss.com/fullPage.js/2.5.2/vendors/jquery.easings.min.js"></script>
-
-    <script src="{{ STATIC_URL }}script/pingpp_pay.js"></script>
-
+{% block style %}
     <link rel="stylesheet" href="{{ STATIC_URL }}style/order.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}style/style_other.css">
     <link rel="stylesheet" href="{{ STATIC_URL }}style/animation.css">
+{% endblock %}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>订单详情</title>
-</head>
-<body>
-{% if not order_pass %}
-<div class="well ">商品信息已失效，2秒后跳转...</div>
-<script></script>
-{% else %}
+
+{% block preload_script %}
+<script src="{{ STATIC_URL }}script/pingpp_pay.js"></script>
+{% endblock %}
+
+{% block container %}
 <div id="form">
     <div class="content">
         <div class="wrapper">
@@ -122,7 +109,9 @@
         确认付款
     </div>
 </div>
+{% endblock %}
 
+{% block delayed_script %}
 <script>
     $(document).ready(function(){
         $('.ui-loader').remove();
@@ -227,6 +216,7 @@
         
     }
 </script>
-{% endif %}
+{% endblock %}
+
 </body>
 </html>
