--- a/shopmanager/flashsale/pay/templates/pay/mproduct.html
+++ b/shopmanager/flashsale/pay/templates/pay/mproduct.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <!-- 新 Bootstrap 核心 CSS 文件 -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.2.0/css/bootstrap.min.css">
+{% extends "pay/pay_base.html" %}
 
-    <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.3.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+{% block title %}小鹿美美-商品详情{% endblock %}
 
-    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
-    <script src="http://cdn.bootcss.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    <script src="http://cdn.bootcss.com/fullPage.js/2.5.2/vendors/jquery.easings.min.js"></script>
+{% block style %}
+<link rel="stylesheet" href="{{ STATIC_URL }}style/product.css">
+<link rel="stylesheet" href="{{ STATIC_URL }}style/style_other.css">
+<link rel="stylesheet" href="{{ STATIC_URL }}style/animation.css">
+{% endblock %}
 
-    <link rel="stylesheet" href="{{ STATIC_URL }}style/product.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}style/style_other.css">
-    <link rel="stylesheet" href="{{ STATIC_URL }}style/animation.css">
+{% block preload_script %}
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>商品详情</title>
-</head>
-<body>
+{% endblock %}
+   
+
+{% block container %}
 {% csrf_token %}
 <input type="hidden" id="id_product" value="{{ id }}"/>
 <div id="image_slider">
@@ -106,7 +99,9 @@
         </div>
     </div>
 </div>
+{% endblock %}
 
+{% block delayed_script %}
 <script>
     var MAX;
 
@@ -342,5 +337,4 @@
         $(target)[0].addEventListener("touchstart",Ctrl_slider_touch_start,false);
     }
 </script>
-</body>
-</html>
+{% endblock %}
