fix weixin sampleads1.html

--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -13,7 +13,7 @@
     <img id="id_donebox" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvpFMUamRIwhQRoaZS4QzjaI1rJJdw0fT1V0KvRSjDDJUlMtiauUQwsWE8SIBIn2eZJJwgrMzJ6Tmg/0"/>
     <p style="margin-top:16px">您的VIP邀请码: {{ vipcode }}</p>
     {% if hongbao_pass %}
-    <p style="color:red">亲，感谢您参与活动，您还获得了微信现金红包一个！请扫二维码加客服微信领取！（长按二维码添加;或保存图片，微信扫一扫，选择相册）</p>
+    <p style="color:red">亲，申请免费试用凉席还可以领微信红包哦！请扫二维码加客服微信领取！（长按二维码添加;或保存图片，微信扫一扫，选择相册）</p>
     <img src="{{ kefu_url }}" alt="">
     {% endif %}
     {% endif %}
@@ -52,7 +52,7 @@
 
   global_timer =  window.setInterval(slideup, 3500);
 
-var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLtT6gXc7vVWZrYUYJMtKDF2vdMlmfjfkMpOXnnWenNicqokRfQBUrNRO2VUJw6YLPGTvJyCV4HNVIw/0";
+var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLuqmflHoCKZY6lBicl5eeKEg2bJHmxBHHNUH3ROOqZBxm7cXt49DOaNfN2nPCxm6Bov6otiaoC3GWnA/0";
 var lineLink = "http://weixin.huyi.so/weixin/sampleads/{{ pk }}/";
 var descContent = "其实，每个宝宝夏天都需要凉快玩耍！不过，。。。";
 var shareTitle = "你家娃，夏天能否凉快玩耍？（无娃禁入）";
